@@ -1,6 +1,5 @@
 package com.larsreimann.api_editor.server.file_handling;
 
-import com.larsreimann.api_editor.server.annotationProcessing.OriginalDeclarationProcessor;
 import com.larsreimann.api_editor.server.data.*;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
@@ -8,7 +7,7 @@ import org.junit.jupiter.api.Test;
 import java.util.Collections;
 import java.util.List;
 
-class ModuleAdapterContentBuilderTest {
+class ModuleStubContentBuilderTest {
     @Test
     void buildModuleContentReturnsFormattedModuleContent() {
         // given
@@ -17,26 +16,48 @@ class ModuleAdapterContentBuilderTest {
             "test-module.test-class",
             List.of("test-decorator"),
             List.of("test-superclass"),
-            List.of(new AnnotatedPythonFunction(
-                "test-class-function",
-                "test-module.test-class.test-class-function",
-                List.of("decorators"),
-                List.of(new AnnotatedPythonParameter(
-                    "only-param",
-                    "test-module.test-class.test-class-function.only-param",
-                    "'defaultValue'",
-                    PythonParameterAssignment.POSITION_OR_NAME,
+            List.of(
+                new AnnotatedPythonFunction(
+                    "test-class-function",
+                    "test-module.test-class.test-class-function",
+                    List.of("decorators"),
+                    List.of(
+                        new AnnotatedPythonParameter(
+                            "only-param",
+                            "test-module.test-class.test-class-function.only-param",
+                            "'defaultValue'",
+                            PythonParameterAssignment.POSITION_OR_NAME,
+                            true,
+                            "typeInDocs",
+                            "description",
+                            Collections.emptyList()
+                        )),
+                    Collections.emptyList(),
                     true,
-                    "typeInDocs",
                     "description",
+                    "fullDocstring",
+                    Collections.emptyList()
+                ),
+                new AnnotatedPythonFunction(
+                    "__init__",
+                    "test-module.test-class.__init__",
+                    List.of("decorators"),
+                    List.of(new AnnotatedPythonParameter(
+                        "only-param",
+                        "test-module.test-class.__init__.only-param",
+                        "'defaultValue'",
+                        PythonParameterAssignment.POSITION_OR_NAME,
+                        true,
+                        "typeInDocs",
+                        "description",
+                        Collections.emptyList()
+                    )),
+                    Collections.emptyList(),
+                    true,
+                    "description",
+                    "fullDocstring",
                     Collections.emptyList()
                 )),
-                Collections.emptyList(),
-                true,
-                "description",
-                "fullDocstring",
-                Collections.emptyList()
-            )),
             "Lorem ipsum",
             "Lorem ipsum",
             Collections.emptyList()
@@ -133,26 +154,25 @@ class ModuleAdapterContentBuilderTest {
             ),
             Collections.emptyList()
         );
-        testModule.accept(OriginalDeclarationProcessor.INSTANCE);
 
         // when
-        ModuleAdapterContentBuilder moduleAdapterContentBuilder =
-            new ModuleAdapterContentBuilder(testModule);
-        String moduleContent = moduleAdapterContentBuilder.buildModuleContent();
+        ModuleStubContentBuilder moduleStubContentBuilder =
+            new ModuleStubContentBuilder(testModule);
+        String moduleContent = moduleStubContentBuilder.buildModuleContent();
 
         //then
         String expectedModuleContent = """
-            import test-module
+            package simpleml.test-module
 
-            class test-class:
-                def test-class-function(only-param='defaultValue'):
-                    test-module.test-class.test-class-function(only-param)
+            open class test-class(only-param: Any? or "defaultValue") {
+                attr only-param: Any?
 
-            def function_module(*, param1, param2, param3):
-                test-module.function_module(param1=param1, param2=param2, param3=param3)
+                fun test-class-function(only-param: Any? or "defaultValue")
+            }
 
-            def test-function(*, test-parameter=42):
-                test-module.test-function(test-parameter=test-parameter)
+            fun function_module(param1: Any?, param2: Any?, param3: Any?) -> test-result: str
+
+            fun test-function(test-parameter: Any? or 42) -> test-result: str
             """;
 
         Assertions.assertEquals(expectedModuleContent, moduleContent);
@@ -169,12 +189,12 @@ class ModuleAdapterContentBuilderTest {
             List.of(
                 new AnnotatedPythonFunction(
                     "function_module",
-                    "test.module.function_module",
+                    "test-module.function_module",
                     List.of("test-decorator"),
                     List.of(
                         new AnnotatedPythonParameter(
                             "param1",
-                            "test.module.function_module_1.param1",
+                            "test-module.function_module.param1",
                             null,
                             PythonParameterAssignment.NAME_ONLY,
                             true,
@@ -184,7 +204,7 @@ class ModuleAdapterContentBuilderTest {
                         ),
                         new AnnotatedPythonParameter(
                             "param2",
-                            "test.module.function_module_1.param2",
+                            "test-module.function_module.param2",
                             null,
                             PythonParameterAssignment.NAME_ONLY,
                             true,
@@ -194,7 +214,7 @@ class ModuleAdapterContentBuilderTest {
                         ),
                         new AnnotatedPythonParameter(
                             "param3",
-                            "test.module.function_module_1.param3",
+                            "test-module.function_module.param3",
                             null,
                             PythonParameterAssignment.NAME_ONLY,
                             true,
@@ -250,36 +270,54 @@ class ModuleAdapterContentBuilderTest {
             ),
             Collections.emptyList()
         );
-        testModule.accept(OriginalDeclarationProcessor.INSTANCE);
 
         // when
-        ModuleAdapterContentBuilder moduleAdapterContentBuilder =
-            new ModuleAdapterContentBuilder(testModule);
-        String moduleContent = moduleAdapterContentBuilder.buildModuleContent();
+        ModuleStubContentBuilder moduleStubContentBuilder =
+            new ModuleStubContentBuilder(testModule);
+        String moduleContent = moduleStubContentBuilder.buildModuleContent();
 
         //then
         String expectedModuleContent = """
-            import test-module
+            package simpleml.test-module
 
-            def function_module(*, param1, param2, param3):
-                test.module.function_module(param1=param1, param2=param2, param3=param3)
+            fun function_module(param1: Any?, param2: Any?, param3: Any?) -> test-result: str
 
-            def test-function(*, test-parameter=42):
-                test-module.test-function(test-parameter=test-parameter)
+            fun test-function(test-parameter: Any? or 42) -> test-result: str
             """;
 
         Assertions.assertEquals(expectedModuleContent, moduleContent);
     }
 
     @Test
-    void buildModuleContentWithNoFunctionsReturnsFormattedModuleContent() {
+    void buildModuleContentWithOnlyConstructorReturnsFormattedModuleContent() {
         // given
         AnnotatedPythonClass testClass = new AnnotatedPythonClass(
             "test-class",
             "test-module.test-class",
             List.of("test-decorator"),
             List.of("test-superclass"),
-            Collections.emptyList(),
+            List.of(
+                new AnnotatedPythonFunction(
+                    "__init__",
+                    "test-module.test-class.__init__",
+                    List.of("decorators"),
+                    List.of(new AnnotatedPythonParameter(
+                        "only-param",
+                        "test-module.test-class.__init__.only-param",
+                        "'defaultValue'",
+                        PythonParameterAssignment.POSITION_OR_NAME,
+                        true,
+                        "typeInDocs",
+                        "description",
+                        Collections.emptyList()
+                    )),
+                    Collections.emptyList(),
+                    true,
+                    "description",
+                    "fullDocstring",
+                    Collections.emptyList()
+                )
+            ),
             "Lorem ipsum",
             "Lorem ipsum",
             Collections.emptyList()
@@ -306,18 +344,19 @@ class ModuleAdapterContentBuilderTest {
             Collections.emptyList(),
             Collections.emptyList()
         );
-        testModule.accept(OriginalDeclarationProcessor.INSTANCE);
 
         // when
-        ModuleAdapterContentBuilder moduleAdapterContentBuilder =
-            new ModuleAdapterContentBuilder(testModule);
-        String moduleContent = moduleAdapterContentBuilder.buildModuleContent();
+        ModuleStubContentBuilder moduleStubContentBuilder =
+            new ModuleStubContentBuilder(testModule);
+        String moduleContent = moduleStubContentBuilder.buildModuleContent();
 
         //then
         String expectedModuleContent = """
-            import test-module
+            package simpleml.test-module
 
-            class test-class:
+            open class test-class(only-param: Any? or "defaultValue") {
+                attr only-param: Any?
+            }
             """;
 
         Assertions.assertEquals(expectedModuleContent, moduleContent);
@@ -328,35 +367,24 @@ class ModuleAdapterContentBuilderTest {
         // given
         AnnotatedPythonModule testModule = new AnnotatedPythonModule(
             "test-module",
-            List.of(
-                new PythonImport(
-                    "test-import1",
-                    "test-alias"
-                )
-            ),
-            List.of(
-                new PythonFromImport(
-                    "test-from-import1",
-                    "test-declaration1",
-                    null
-                )
-            ),
+            Collections.emptyList(),
+            Collections.emptyList(),
             Collections.emptyList(),
             Collections.emptyList(),
             Collections.emptyList()
         );
-        testModule.accept(OriginalDeclarationProcessor.INSTANCE);
 
         // when
-        ModuleAdapterContentBuilder moduleAdapterContentBuilder =
-            new ModuleAdapterContentBuilder(testModule);
-        String moduleContent = moduleAdapterContentBuilder.buildModuleContent();
+        ModuleStubContentBuilder moduleStubContentBuilder =
+            new ModuleStubContentBuilder(testModule);
+        String moduleContent = moduleStubContentBuilder.buildModuleContent();
 
         //then
         String expectedModuleContent = """
-            import test-module
+            package simpleml.test-module
             """;
 
         Assertions.assertEquals(expectedModuleContent, moduleContent);
     }
 }
+
